Update agent instructions